Fixed name from being too small on mobile
changed name to static em size, until screen size is smaller than 570,
in which the font width will encompass entire screen width.

--- a/css/Personal Website CSS.css
+++ b/css/Personal Website CSS.css
@@ -19,16 +19,29 @@ body {
 	z-index: -2;
 	position: relative;
 	background-color: purple;
+	text-align: center;
 }
 
 #name{
-	text-align: center;
-	font-size: 5vw;
+	font-size: 5em;
+
+	width: 75%;
 	position: fixed;
+	left: 50%;
+	margin-left: -37.5%;
+
 	top: 40%;
-	left: 35%;
+
 	z-index: 1;
 }
+
+
+@media screen and (max-width: 570px){
+	#name{
+		font-size: 12vw;
+	}
+}
+
 
 #content {
 	z-index: 10;
